@@ -9,6 +9,11 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2001-01-17  Stefan Petersen  <spe@geda.seul.org>
+
+	* scheme/auto-uref.scm: Made the associative list,used to keep track
+	  of used prefixes, using _real_ Guile associative list functions.
+	
 2001-01-16  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* docs/gschem.txt: Added a few lines about label= attribute
